themes/btcsumo/assets/styles/components/_feed-box.scss
.feed-boxes {
  display: flex;
  display: -ms-flexbox; /*IE10*/
  display: -webkit-flex;
  flex-wrap: wrap;
  -ms-flex-wrap: wrap; /*IE10*/
  -webkit-flex-wrap: wrap;

  .feed-box {

    .feed-twitter,
    .feed-refresh {
      @include transition(opacity 0.25s);
      cursor: pointer;
      opacity: 0.25;
    }
    .feed-twitter:hover,
    .feed-refresh:hover {
      opacity: 1;
    }
    .feed-refresh {
      float: right;
    }

    .feed-item {
      padding: 0;

      a {
        cursor: pointer;
        display: block;
        margin: 0;
        padding: 5px 10px;
      }

      .feed-item-date {
       background-color: #bfbfbf;
    color: #000;
    float: right;
      }
    }

    .load-more {
      padding: 0;
      margin: 0;

      .row {
        padding: 0;
        margin: 0;
      }

      a {
        text-align: center;
        cursor: pointer;
        display: block;
        margin: 0;
        padding: 5px 10px;
      }
      a:hover {
        background-color: yellow(0,0,0,0.05);
      }
      a.disabled {
        color: rgba(0,0,0,0.5);
      }
    }

  }
}
li.feed-item.list-group-item a {
    background-color: #f0f0f0;
}

